--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "enseignant",
   "main": "expo-router/entry",
   "version": "1.0.0",
+  "description": "French Teacher Classroom Management System for Cameroon",
+  "author": "Litoi Code",
+  "license": "SEE LICENSE IN LICENSE",
+  "copyright": "© 2024 Litoi Code. All rights reserved.",
   "scripts": {
     "start": "expo start",
     "reset-project": "node ./scripts/reset-project.js",
