--- a/app.json
+++ b/app.json
@@ -3,6 +3,7 @@
     "name": "Enseignant - Gestion de Classe",
     "slug": "enseignant",
     "version": "1.0.0",
+    "description": "© 2024 Litoi Code. Educational software for Cameroonian teachers. Licensed for educational use in Cameroon only.",
     "orientation": "portrait",
     "icon": "./assets/images/icon.png",
     "scheme": "enseignant",
@@ -12,6 +13,8 @@
       "supportsTablet": true
     },
     "android": {
+      "package": "com.enseignant.classroommanagement",
+      "versionCode": 1,
       "adaptiveIcon": {
         "foregroundImage": "./assets/images/adaptive-icon.png",
         "backgroundColor": "#ffffff"
@@ -20,7 +23,9 @@
       "permissions": [
         "android.permission.WRITE_EXTERNAL_STORAGE",
         "android.permission.READ_EXTERNAL_STORAGE"
-      ]
+      ],
+      "allowBackup": true,
+      "softwareKeyboardLayoutMode": "pan"
     },
     "web": {
       "bundler": "metro",
@@ -47,6 +52,12 @@
     ],
     "experiments": {
       "typedRoutes": true
+    },
+    "extra": {
+      "router": {},
+      "eas": {
+        "projectId": "45886a5f-cfa1-46a9-a8c2-de0c1b2c65de"
+      }
     }
   }
 }
