--- a/package.json
+++ b/package.json
@@ -22,8 +22,10 @@
     "@react-navigation/native": "^7.1.6",
     "date-fns": "^4.1.0",
     "expo": "~53.0.9",
+    "expo-application": "^6.1.4",
     "expo-blur": "~14.1.4",
     "expo-constants": "~17.1.6",
+    "expo-device": "^7.1.4",
     "expo-document-picker": "^13.1.5",
     "expo-file-system": "^18.1.10",
     "expo-font": "~13.3.1",
