🚀 Major Update: Complete ClassMaster Implementation
✨ Features Added:
- Complete export/import functionality with web compatibility
- Enhanced splash screen with Cameroonian flag
- Comprehensive user guide and help system
- Premium unlock system with freemium model
- Web-compatible license modal system
- Android build configuration and EAS setup

🔧 Technical Improvements:
- Fixed web compatibility issues for all components
- Enhanced data validation and error handling
- Improved UI/UX across all screens
- Added comprehensive build scripts and guides
- Updated branding to ClassMaster throughout

📱 Platform Support:
- Full Android support with proper build configuration
- Web compatibility with responsive design
- Cross-platform modal system for license display
- Enhanced mobile-first design patterns

🎯 User Experience:
- Professional splash screen with flag animation
- Intuitive navigation and user guidance
- Clear premium upgrade path
- Comprehensive help documentation
- Modern, accessible interface design

--- a/.gitignore
+++ b/.gitignore
@@ -37,3 +37,11 @@ yarn-error.*
 *.tsbuildinfo
 
 app-example
+
+# Admin logs and sensitive data
+admin/codes_generated.log
+admin/*.log
+*.log
+
+# French Teacher App specific
+# © 2024 Litoi Code
