🎯 Rebrand to ClassCM - Assistant Pédagogique Camerounais
✨ Complete Rebranding:
- App name: ClassCM (Class Cameroun)
- Subtitle: Assistant Pédagogique Camerounais
- Package: com.litoicode.classcm
- Scheme: classcm

📱 Updated Components:
- App configuration (app.json, package.json)
- Android package structure and manifests
- Copyright notices and license dialogs
- Export file naming and branding
- UI text throughout the application

🇨🇲 Cameroon Focus:
- Emphasizes Cameroonian educational focus
- Maintains French language and cultural relevance
- Professional, memorable brand identity
- Perfect for local market recognition

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -25,8 +25,8 @@
         <action android:name="android.intent.action.VIEW"/>
         <category android:name="android.intent.category.DEFAULT"/>
         <category android:name="android.intent.category.BROWSABLE"/>
-        <data android:scheme="enseignant"/>
-        <data android:scheme="exp+enseignant"/>
+        <data android:scheme="classcm"/>
+        <data android:scheme="exp+classcm"/>
       </intent-filter>
     </activity>
   </application>
