feat: Update ClassCM configuration and dependencies
- Updated EAS build configuration with appVersionSource
- Enhanced Android build settings for better compatibility
- Updated package dependencies for latest features
- Improved app.json configuration for ClassCM branding
- Added development build support for testing
- Updated code_penal.json with latest legal references

Ready for EAS development build and GitHub distribution.

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -87,10 +87,10 @@ android {
     buildToolsVersion rootProject.ext.buildToolsVersion
     compileSdk rootProject.ext.compileSdkVersion
 
-    namespace 'com.litoicode.enseignant'
+    namespace 'com.litoicode.classcm'
     defaultConfig {
-        applicationId 'com.litoicode.enseignant'
-        minSdkVersion rootProject.ext.minSdkVersion
+        applicationId 'com.litoicode.classcm'
+        minSdkVersion 21
         targetSdkVersion rootProject.ext.targetSdkVersion
         versionCode 1
         versionName "1.0.0"
